--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>This is a cheat sheet of html</title>
+        <link rel="stylesheet" href="stylesheets.css">
     </head>
     <body>
         <section>
